--- a/index.html
+++ b/index.html
@@ -92,12 +92,11 @@
       text-align: center;
       margin-bottom: 40px;
       font-weight: bold;
-      font-size: 2rem;
+      font-size: 28px;
       color: #c8a06b;
       text-transform: uppercase;
       position: relative;
       box-shadow: 0px 0px 20px 0px rgb(200 160 107);
-
       border-radius: 30px;
       padding: 5px;
       transition: transform 0.3s ease, box-shadow 0.3s ease;
@@ -108,7 +107,6 @@
       text-align: center;
       margin-bottom: 40px;
       font-weight: bold;
-      font-size: 2rem;
       color: #c8a06b;
       text-transform: uppercase;
       position: relative;
@@ -134,7 +132,6 @@
     }
 
     #barbershopTitle {
-      font-size: 2.5rem;
       font-weight: bold;
       color: #c8a06b;
       margin-bottom: 20px;
@@ -455,7 +452,7 @@
 
   <section id="home" class="fade-in">
     <div class="container">
-      <p class="section-title h1" id="barbershopTitle">Brothers Barbearia</p>
+      <p class="section-title" id="barbershopTitle">Brothers Barbearia</p>
       <div id="descriptionCarousel" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner" id="carouselInner">
         </div>
