--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
-  <link rel="shortcut icon" id="dynamic-favicon" href="barber.png" type="image/x-icon" />
+  <link rel="shortcut icon" id="dynamic-favicon" href="brotherslogo.png" type="image/x-icon" />
   <title>Brothers Barbearia</title>
   <meta name="description" content="Bem-vindo à Brothers Barbearia. Experimente nossos serviços de excelência." />
   <meta name="author" content="Brothers Barbearia" />
@@ -18,7 +18,7 @@
   <meta name="twitter:title" content="Brothers Barbearia" />
   <meta name="twitter:description"
     content="Bem-vindo à Brothers Barbearia. Experimente nossos serviços de excelência." />
-  <meta name="twitter:image" content="barber.png" />
+  <meta name="twitter:image" content="brotherslogo.png" />
   <script type="application/ld+json" id="schema-markup">{}</script>
   <style>
     /* RESET */
@@ -432,7 +432,7 @@
   <nav class="navbar navbar-expand-lg fade-in">
     <div class="container-fluid">
       <a class="navbar-brand d-flex align-items-center" href="#home">
-        <img src="barber.png" alt="Logo da barbearia" id="navBarbershopLogo" class="img-fluid" />
+        <img src="brotherslogo.png" alt="Logo da barbearia" id="navBarbershopLogo" class="img-fluid" />
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent"
         aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
